[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/levels/mainlev_build.png" type="Texture" id=1]
[ext_resource path="res://scenes/models/TransportVehicle.gd" type="Script" id=2]
[ext_resource path="res://sounds/Metroid_Door-Brandino.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.70725, 14.4897 )

[node name="TransporterVehicle" type="Area2D"]
pause_mode = 1
scale = Vector2( 5.31223, 3.75396 )
monitorable = false
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.488617, -0.628585 )
scale = Vector2( 0.364021, 0.441977 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 959.355, 15, 49.3815, 65.0473 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.445448, -0.779535 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="TransporterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
